--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -6,7 +6,7 @@ SRCS =	main.cpp \
 
 OBJS =	$(SRCS:.cpp=.o)
 
-CXX =	g++
+CXX =	c++
 CXXFLAGS =	-Wall -Wextra -Werror -std=c++98
 
 .PHONY: all clean fclean re
