--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -1,7 +1,9 @@
-NAME =	claptrap
+NAME =	fragtrap
 
 SRCS =	main.cpp \
-		ClapTrap.cpp
+		ClapTrap.cpp \
+		ScavTrap.cpp \
+		FragTrap.cpp \
 
 OBJS =	$(SRCS:.cpp=.o)
 
